5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1671_1880.log
== TEST (2019-04-29 04:38:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("digite um numero: "))

if  ((m > 12) or (m < 0)):
	print("numero de mes invalido")
elif (m == 1):
	print("janeiro
elif (m == 2):
	print("feveireiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif(m ==5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
else:
	print("dezembro")
-- ERROR:
File "XXXX", line 7
    print("janeiro
                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 04:39:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("digite um numero: "))

if  ((m > 12) or (m < 0)):
	print("numero de mes invalido")
elif (m == 1):
	print("janeiro")
elif (m == 2):
	print("feveireiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m ==5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif (m == 11):
	print("novembro")
else:
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 04:39:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("digite um numero: "))

if  ((m > 12) or (m < 0)):
	print("numero de mes invalido")
elif (m == 1):
	print("janeiro")
elif (m == 2):
	print("feveireiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m ==5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif (m == 11):
	print("novembro")
else:
	print("dezembro")
-- EXECUTION TIME:
0.198186
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
